--- a/session1_linear_layout/app/src/main/res/layout/activity_main.xml
+++ b/session1_linear_layout/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.cheruixi.linearlayout.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
 
-    <TextView
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+
+
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="@string/input_prompt"
+        android:inputType="numberDecimal"
+        android:imeOptions="actionNext"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shaonv1"
+            android:maxHeight="400dp"
+            android:id="@+id/iv1"
+            android:maxWidth="200dp"
+            android:adjustViewBounds="true"
+            android:layout_centerInParent="true"
+            />
 
-</android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/previous"
+            android:layout_marginHorizontal="10dp"
+            android:onClick="previousImg"
+            android:text="上一张"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/next"
+            android:layout_weight="1"
+            android:onClick="nextImg"
+            android:layout_marginHorizontal="10dp"
+            android:text="下一张"/>
+    </LinearLayout>
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="#aa0000"-->
+        <!--android:fontFamily="cursive"-->
+        <!--android:text="@string/hello"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="50dp" />-->
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="#00aa00"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:fontFamily="cursive"-->
+        <!--android:textSize="50dp"-->
+        <!--android:text="@string/hello"/>-->
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="#0000aa"-->
+        <!--android:fontFamily="cursive"-->
+        <!--android:textSize="50dp"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:text="@string/hello"/>-->
+
+</LinearLayout>
