--- a/ListView2/app/src/main/res/layout/activity_main.xml
+++ b/ListView2/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,10 @@
         android:text="Simple Adapter "
         android:onClick="demoSimple"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Base Adapter "
+        android:onClick="demoBase"/>
+
 </LinearLayout>
