--- a/CalendarManager/app/src/main/res/layout/activity_main.xml
+++ b/CalendarManager/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal">
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/tasks">
+
+            </ListView>
+        </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
