--- a/CalendarManager/app/src/main/res/values/colors.xml
+++ b/CalendarManager/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="title">#FF62C680</color>
     <color name="white">#ffffff</color>
     <color name="button_color">#f86a0c</color>
+    <color name="yellow">#fec749</color>
+    <color name="black">#000000</color>
 </resources>
