--- a/CalendarManager/app/src/main/res/layout/tasks.xml
+++ b/CalendarManager/app/src/main/res/layout/tasks.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:background="@color/yellow"
+            android:id="@+id/status_bar"
             />
     </LinearLayout>
     <LinearLayout
@@ -52,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finish"
+            android:id="@+id/finish_button"
             />
     </LinearLayout>
 </LinearLayout>
